modify_metadata: a form member's classifier is set once per call; the fold is removed
Folding repeated type / valueType writes to the last one made two new disagreements: the
dropped write vanished from `applied`, and the retype guards still ran on it and could refuse a
safe final state. Rather than more machinery around "last write wins", a batch that writes one
member's classifier (an item's type or an attribute's valueType, either spelling) more than once
is refused in formTypeExtInfoComboError, before any change is prepared or any guard runs. The
gate, the guards, the apply and `applied` then all see a single classifier write.

The e2e round trip now pins the refusal and an untouched binding; the guide says it in one line.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>